# fast-ai

./: .gitignore  NB1-ImageClassification-Train|Run|Save.ipynb  NB2-How_does_a_neural_net_really_work.ipynb  NB2_How_does_a_neural_net_really_work.ipynb  NB3-NLP_for_absolute_beginners.ipynb  NB4-NeuralNets-with-and-without-frameworks.ipynb  NB5-Road-to-the-top.ipynb  NB7-Stable_Diffusion_warmup.ipynb  NB8-Stable_Diffusion_DeepDive.ipynb  README.md  colab_create_nb_test.ipynb  fast-ai-nb1-bird-detector.ipynb  pyproject.toml  small-models-road-to-the-top-part-2.ipynb
.github/workflows/: sync-src-to-drive.yml
Diffusion/: looking_inside_SD_inference_pipeline.ipynb  working_w_SD_inference_pipeline.ipynb
part1_nbs/: NB5-1-Road-to-the-top.ipynb
part2_nbs/: 01_matmul.ipynb  02_1_efficient_meanshift_clustering.ipynb  02_2_efficient_kmeans_clustering.ipynb  03_backprop.ipynb  04_minibatch_training.ipynb  05_hf_datasets.ipynb  07_convolutions.ipynb  08_slow_inaccurate_autoencoder.ipynb  09_learner.ipynb  10_activations.ipynb  11_initializing_normalization.ipynb  12_accel_sgd.ipynb  13_resnet.ipynb  14_augment.ipynb  15_DDPM.ipynb  16A_StyleTransfer.ipynb  16B_NCA.ipynb  17_DDPM_v2.ipynb  18_fid.ipynb  18_image_gen_eval.ipynb  19_DDPM_v3.ipynb  20_DDIM.ipynb  21_cifar10_and_wandb.ipynb  22_cosine.ipynb  22_noise-pred.ipynb  23_karras.ipynb  24_imgnet_tiny.ipynb  25_superres.ipynb  26_diffusion_unet.ipynb
src/: accel.py  activations.py  augment.py  conv.py  datasets.py  diffusion.py  fid.py  init.py  learner.py  resnet.py  sgd.py  training.py  utils.py
(+9 files in other folders)
