[project]
name = "fast-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.7.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "numba>=0.64.0",
    "python-dotenv>=1.2.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
